[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-diagnostics"
version = "0.1.0"
description = "AI-powered RL training diagnostics. No graphs. Just answers."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "tensorboard>=2.14.0",
]

[project.scripts]
rl-diagnostics = "rl_diagnostics.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_diagnostics*"]
